chore: i18n keys updated

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -5,7 +5,7 @@
   "iam.text1": "I'm a Software Developer. Actually I work for ",
   "iam.text2": "intive",
   "iam.text3": "company as a",
-  "iam.text4": "React Native Developer",
+  "iam.text4": "Senior Software Engineer",
   "iam.text5": "I have been dedicated to software development since 2017 (before I did some small developments). I have worked in several companies, among which are:",
   "iam.text6": ": Owner. Mobile and Web development using ReactJS | React Native/Expo.",
   "iam.text7": ": I developed 11 mobile applications (iOS/Android) belonging to the Exponential Apps program.",
