--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -5,7 +5,7 @@
   "iam.text1": "Soy Desarrollador de Software. Actualmente trabajo para la compañía ",
   "iam.text2": "intive",
   "iam.text3": "como",
-  "iam.text4": "React Native Developer",
+  "iam.text4": "Senior Software Engineer",
   "iam.text5": "Me dedico al desarrollo de software desde el año 2017 (antes hice algunos pequeños desarrollos). He trabajado en varias empresas, entre las cuales se encuentran:",
   "iam.text6": ": Propietario. Desarrollo de soluciones informáticas móviles y web usando ReactJS | React Native/Expo.",
   "iam.text7": ": Desarrollé 11 aplicaciones móviles (iOS/Android) pertenecientes al programa Exponential Apps.",
