--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,11 +2,11 @@
   "navigation.home": "Home",
   "navigation.tools": "Tools",  
   "iam.hello": "Hey, I am Leandro!",
-  "iam.text1": "I'm a Software Developer. Actually I work for ",
+  "iam.text1": "I'm a Software Developer. Currently, I work for the company ",
   "iam.text2": "intive",
-  "iam.text3": "company as a",
-  "iam.text4": "Senior Software Engineer",
-  "iam.text5": "I have been dedicated to software development since 2017 (before I did some small developments). I have worked in several companies, among which are:",
+  "iam.text3": "as a",
+  "iam.text4": "Senior Software Engineer.",
+  "iam.text5": "I have been involved in software development since 2017 although prior to that, I had worked on some smaller projects. Throughout my career, I have gained experience working in various companies, some of which include:",
   "iam.text6": ": Owner. Mobile and Web development using ReactJS | React Native/Expo.",
   "iam.text7": ": I developed 11 mobile applications (iOS/Android) belonging to the Exponential Apps program.",
   "iam.text8": ": I developed the ELFE Agenda app (iOS/Android) for the Exponential Learning for Excellence program.",
