atiladev description updated

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -7,7 +7,7 @@
   "iam.text3": "as a",
   "iam.text4": "Senior Software Engineer.",
   "iam.text5": "I have been involved in software development since 2017 although prior to that, I had worked on some smaller projects. Throughout my career, I have gained experience working in various companies, some of which include:",
-  "iam.text6": ": Owner. Mobile and Web development using ReactJS | React Native/Expo.",
+  "iam.text6": ": Owner. Mobile and Web development using ReactJS, NextJS, React Native and Flutter!",
   "iam.text7": ": I developed 11 mobile applications (iOS/Android) belonging to the Exponential Apps program.",
   "iam.text8": ": I developed the ELFE Agenda app (iOS/Android) for the Exponential Learning for Excellence program.",
   "iam.text9": ": I was working in the ",
