--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,13 +1,13 @@
 {
   "navigation.home": "Home",
-  "navigation.tools": "Tools",  
+  "navigation.tools": "Tools",
   "iam.hello": "Hey, I am Leandro!",
-  "iam.text1": "I'm a Software Developer. Currently, I work for the company ",
-  "iam.text2": "intive",
-  "iam.text3": "as a",
-  "iam.text4": "Senior Software Engineer.",
+  "iam.text1": ": I worked on ",
+  "iam.text2": "",
+  "iam.text3": "",
+  "iam.text4": "",
   "iam.text5": "I have been involved in software development since 2017 although prior to that, I had worked on some smaller projects. Throughout my career, I have gained experience working in various companies, some of which include:",
-  "iam.text6": ": Owner. Mobile and Web development using ReactJS, NextJS, React Native and Flutter!",
+  "iam.text6": ": Owner. Mobile and Web development using ReactJS, NextJS, NestJS, React Native and Flutter!",
   "iam.text7": ": I developed 11 mobile applications (iOS/Android) belonging to the Exponential Apps program.",
   "iam.text8": ": I developed the ELFE Agenda app (iOS/Android) for the Exponential Learning for Excellence program.",
   "iam.text9": ": I was working in the ",
@@ -23,7 +23,7 @@
   "iam.text19": ". It contains filters and keyboard shortcuts, facilitating the handling of the utility.",
   "iam.text20": ": Utility I developed to search for Google Fonts using the library ",
   "iam.text21": ". Contains keyboard shortcuts and easy access to copy the exact installer of each selected font.",
-  "iam.text22": "I love to travel, meet people, learn and share ideas. If you're interested in working with me or just chatting, don't hesitate to contact me!",  
+  "iam.text22": "I love to travel, meet people, learn and share ideas. If you're interested in working with me or just chatting, don't hesitate to contact me!",
   "iam.text23": ": Hook that I developed to be used with Expo Calendars to facilitate access to the calendar, managing access permissions, it stores a reference in the device so as not to recreate the same calendar twice.",
   "footer.text1": "This site was developed with ",
   "footer.text2": " and deployed in ",
