--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -2,12 +2,12 @@
   "navigation.home": "Inicio",
   "navigation.tools": "Herramientas",
   "iam.hello": "¡Hola, Soy Leandro!",
-  "iam.text1": "Soy Desarrollador de Software. Actualmente trabajo para la compañía ",
-  "iam.text2": "intive",
-  "iam.text3": "como",
-  "iam.text4": "Senior Software Engineer",
+  "iam.text1": ": Trabajé para ",
+  "iam.text2": "",
+  "iam.text3": "",
+  "iam.text4": "",
   "iam.text5": "Me dedico al desarrollo de software desde el año 2017 (antes hice algunos pequeños desarrollos). He trabajado en varias empresas, entre las cuales se encuentran:",
-  "iam.text6": ": Propietario. Desarrollo de soluciones informáticas móviles y web usando ReactJS, NextJS, React Native and Flutter!",
+  "iam.text6": ": Propietario. Desarrollo de soluciones informáticas móviles y web usando ReactJS, NextJS, NestJS, React Native and Flutter!",
   "iam.text7": ": Desarrollé 11 aplicaciones móviles (iOS/Android) pertenecientes al programa Exponential Apps.",
   "iam.text8": ": Desarrollé la aplicación Agenda ELFE (iOS/Android) para el programa Exponential Learning for Excellence.",
   "iam.text9": ": Trabajé en el equipo de ",
